Resolves: fdo#45271, i#17964 count CJK words the way that's expected by users